crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_compact.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 681
expression: "render_snapshot(&state, &mut cache, 96, 24)"
---
routa.js  2 dirty  1 unattributed  loc: --  transport: socket
┌Git Status────────────────────────────────────────────────────────────────────────────────────┐
│ 2 files, 0 untracked, 5 commits, 1 agent, branch: main, 2 worktrees                          │
│──────────────────────────────────────────────────────────────────────────────────────────────│
│> tui.rs                                                                                      │
│  ...s-monitor/src  M  +38 -5     4m                                                          │
│  route.ts                                                                                    │
│  .../api/a2a/card  D  -12        5m                                                          │
│                                                                                              │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌Diff Preview──────────────────────────────────────────────────────────────────────────────────┐
│@@ -1,2 +1,3 @@                                                                               │
│-use old                                                                                      │
│+use new                                                                                      │
│+use cache                                                                                    │
│                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌File Detail───────────────────────────────────────────────────────────────────────────────────┐
│tui.rs                                                                                        │
│crates/harness-monitor/src                                                                    │
│Lines: ...  Size: ...  Git changes: ...                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
↑↓ select  S run sort  v run filter  u unknown  d preview  Pg scroll  g refresh fitness  m fast/
